Dtos and API Controllers rev 1

--- a/src/Backend/HotelProject.EntityLayer/HotelProject.EntityLayer.csproj
+++ b/src/Backend/HotelProject.EntityLayer/HotelProject.EntityLayer.csproj
@@ -14,4 +14,10 @@
     <ProjectReference Include="..\HotelProject.CoreLayer\HotelProject.CoreLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dtos\ServiceDto\" />
+    <Folder Include="Dtos\SubscribeDto\" />
+    <Folder Include="Dtos\StaffDto\" />
+  </ItemGroup>
+
 </Project>
