After .Net 7 Upgrade

--- a/src/Frontend/HotelProject.WebUI/HotelProject.WebUI.csproj
+++ b/src/Frontend/HotelProject.WebUI/HotelProject.WebUI.csproj
@@ -29,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Backend\HotelProject.DataAccessLayer\HotelProject.DataAccessLayer.csproj" />
     <ProjectReference Include="..\..\Backend\HotelProject.EntityLayer\HotelProject.EntityLayer.csproj" />
   </ItemGroup>
 
