--- a/src/Frontend/HotelProject.WebUI/appsettings.json
+++ b/src/Frontend/HotelProject.WebUI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MsSQL": "Data Source=APACHIE;Initial Catalog=HotelierDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;"
+
+  }
 }
